Fix spacing of form elements on Delivery and Billing panes by modifying uc_cart stylesheet.

--- a/uc_cart/uc_cart.css
+++ b/uc_cart/uc_cart.css
@@ -198,6 +198,11 @@ td.subtotal {
   padding: 5px 6px 6px;
 }
 
+#uc-cart-checkout-form .form-item {
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+
 /**
  * CSS rules for payment details tables.
  */
